# liaison-spark

./: .gitignore  GEMINI.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: __init__.py  pyproject.toml
backend/app/agents/: nodes.py  state.py  workflow.py
backend/app/agents/nodes/: __init__.py  architect.py  base.py  chat.py  coder.py  reviewer.py  router.py
backend/app/api/: main.py  routes.py  schemas.py
backend/app/core/: config.py
backend/app/core/exceptions/: exceptions.py
backend/app/core/logging/: logging.py
backend/app/core/telemetry/: telemetry.py
backend/app/domain/: metadata.py  semantic_layer.py
backend/app/ingestion/data/weaviate/: metadata_harvester.py
backend/app/rag/: semantic_layer.py
backend/app/services/: llm_service.py  weaviate_service.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
src/: agent.py  app.py  metadata_harvester.py  mock_data.json
