[project]
name = "liaison-spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
