[project]
name = "liaison-spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langchain-weaviate>=0.0.6",
    "langgraph>=1.1.9",
    "openinference-instrumentation-langchain>=0.1.63",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-instrumentation>=0.62b1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pydantic>=2.13.3",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
    "weaviate-client>=4.21.0",
]
