[project]
name = "liaison-spark"
version = "0.1.0"
description = "Autonomous Big Data Analyst & PySpark Generator"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langchain-weaviate>=0.0.6",
    "langgraph>=1.1.9",
    "openinference-instrumentation-langchain>=0.1.63",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-instrumentation>=0.62b1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pydantic>=2.13.3",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
    "weaviate-client>=4.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
# Match the template's strictness
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.lint]
# template-standard rules:
# E/W: pycodestyle, F: Pyflakes, I: isort, B: flake8-bugbear, UP: pyupgrade
select = ["E", "W", "F", "I", "B", "UP", "N"]
ignore = ["E501"] # Formatting handles line length

[tool.ruff.lint.isort]
# Keeps your heavy LangChain/Telemetry imports organized
combine-as-imports = true
force-single-line = false
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
# Essential for your async LangGraph nodes
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]